# super-computing-machine

./: .gitignore  pyproject.toml
smth/: __main__.py
