[tool.poetry]
name = "pyro-self-bot-tg"
version = "0.1.0"
description = ""
authors = ["hoopengo <hoopengo@yandex.ru>"]
readme = "README.md"
packages = [{include = "pyro_self_bot_tg"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
tgcrypto = "^1.2.5"
telethon = "^1.29.3"
pyrogram = "^2.0.106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
